--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,56 @@
-* {
-  margin: 0;
+/* universal */
+
+body {
+
+margin: 0;
+font-family: helvetica, sans-serif;
+font-size: 22;
+color: seashell;
+background-color: black;
+opacity: 0.9;
+
 }
+
+/* header bar */
+
+header {
+
+display: flex;
+position: fixed;
+height: 69px;
+width: 100%;
+align-items: center;
+justify-content: space-between;
+border-bottom: 1px solid seashell;
+z-index: 1;
+background-color: black;
+
+}
+
+.logo {
+
+display: inline-block;
+padding-left: 10px;
+
+}
+
+.logo img {
+
+  height: 50px;
+
+}
+
+nav {
+
+display: inline-block;
+text-decoration: underline;
+
+}
+
+nav span {
+
+padding-right: 30px;
+
+}
+
+/* */
