--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,6 +5,7 @@ body {
 margin: 0;
 font-family: helvetica, sans-serif;
 font-size: 22;
+text-align: center;
 color: seashell;
 background-color: black;
 opacity: 0.9;
@@ -17,6 +18,7 @@ header {
 
 display: flex;
 position: fixed;
+flex-grow: 1;
 height: 69px;
 width: 100%;
 align-items: center;
@@ -50,7 +52,32 @@ text-decoration: underline;
 nav span {
 
 padding-right: 30px;
+color: seashell;
 
 }
 
-/* */
+/* content styles */
+
+.content {
+
+display: flex;
+position: absolute;
+flex-direction: column;
+align-content: center;
+padding-top: 69px;
+width: 1200px;
+margin: auto;
+
+}
+
+/* mission */
+
+.mission {
+
+display: flex;
+width: 100%;
+height: 700px;
+flex grid-row: 1;
+background-repeat: url('../images/img-mission-background.jpg')
+
+}
