--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,7 +4,7 @@ body {
 
 margin: 0;
 font-family: helvetica, sans-serif;
-font-size: 22;
+font-size: 22px;
 text-align: center;
 color: seashell;
 background-color: black;
@@ -45,7 +45,6 @@ padding-left: 10px;
 nav {
 
 display: inline-block;
-text-decoration: underline;
 
 }
 
@@ -53,6 +52,7 @@ nav span {
 
 padding-right: 30px;
 color: seashell;
+text-decoration: underline;
 
 }
 
@@ -61,9 +61,7 @@ color: seashell;
 .content {
 
 display: flex;
-position: absolute;
-flex-direction: column;
-align-content: center;
+align-items: center;
 padding-top: 69px;
 width: 1200px;
 margin: auto;
@@ -75,9 +73,22 @@ margin: auto;
 .mission {
 
 display: flex;
+flex-grow: 1;
+align-items: center;
 width: 100%;
 height: 700px;
-flex grid-row: 1;
-background-repeat: url('../images/img-mission-background.jpg')
+background-image: url('../images/img-mission-background.jpg')
+
+
+}
+
+.mission span {
+
+display: inline-block;
+width: 100%;
+height: auto;
+background-color: black;
+align-items: center;
+
 
 }
