--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -98,10 +98,11 @@ align-items: center;
 
 .featured {
 
-display: flex;
-flex-grow: 1;
+display: inline-flex;
 justify-content: space-between;
 width: 1000px;
+height: 200px;
+align-items: flex-end;
 
 }
 
@@ -109,19 +110,52 @@ width: 1000px;
 
 display: inline-block;
 width: 100%;
+margin: 0px;
+
+}
+
+/* teas */
+
+.tea-container {
+
+  display: flex;
+  flex-flow: wrap row;
+  justify-content: center;
+  width: 1000px;
+  margin: 0px;
 
 }
 
 .tea {
 
-display: inline-block;
+display: flex;
+flex-direction: column;
 width: 300px;
+height: auto;
+margin: 10px;
 
 }
 
 .tea img {
 
+display: inline-block;
 width: 300px;
 height: 200px;
+padding-bottom: 10px;
+
+}
+
+.tea h4 {
+
+  display: inline-block;
+  margin: 0px 0px 10px 0px;
+
+}
+
+/* locations */
+
+.location-container {
+
+display: flex;
 
 }
