--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -62,6 +62,7 @@ text-decoration: underline;
 
 display: flex;
 flex-direction: column;
+flex-wrap: wrap;
 align-items: center;
 padding-top: 69px;
 width: 1200px;
@@ -103,6 +104,8 @@ justify-content: space-between;
 width: 1000px;
 height: 200px;
 align-items: flex-end;
+padding: 0px;
+margin: 0px;
 
 }
 
@@ -110,7 +113,8 @@ align-items: flex-end;
 
 display: inline-block;
 width: 100%;
-margin: 0px;
+height: 120;
+margin: 0px 0px 0px 0px;
 
 }
 
@@ -119,7 +123,7 @@ margin: 0px;
 .tea-container {
 
   display: flex;
-  flex-flow: wrap row;
+  flex-wrap: wrap;
   justify-content: center;
   width: 1000px;
   margin: 0px;
@@ -157,5 +161,39 @@ padding-bottom: 10px;
 .location-container {
 
 display: flex;
+flex-grow: 1;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+width: 100%;
+height: 500px;
+margin: 50px 0px 0px 0px;
+background-image: url('../images/img-locations-background.jpg')
+
+}
+
+
+.location-container span {
+
+display: inline-block;
+width: 100%;
+height: 70px;
+margin: 0px
+
+}
+
+
+.location {
+
+display: flex;
+flex-direction: column;
+width: 300px;
+height: 350px;
+height: auto;
+background-color: black;
+align-items: center;
+justify-content: center;
+margin: 15px 40px;
+
 
 }
