--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -74,12 +74,12 @@ margin: auto;
 
 .mission {
 
-display: flex;
-flex-grow: 1;
-align-items: center;
-width: 100%;
-height: 700px;
-background-image: url('../images/img-mission-background.jpg')
+  display: flex;
+  flex-grow: 1;
+  align-items: center;
+  width: 100%;
+  height: 700px;
+  background-image: url('../images/img-mission-background.jpg')
 
 
 }
@@ -99,22 +99,21 @@ align-items: center;
 
 .featured {
 
-display: inline-flex;
-justify-content: space-between;
-width: 1000px;
-height: 200px;
-align-items: flex-end;
-padding: 0px;
-margin: 0px;
+  display: inline-flex;
+  width: 1000px;
+  height: 200px;
+  align-items: flex-end;
+  padding: 0px;
+  margin: 0px;
 
 }
 
 .featured span {
 
-display: inline-block;
-width: 100%;
-height: 120;
-margin: 0px 0px 0px 0px;
+  display: inline-block;
+  width: 100%;
+  height: 120;
+  margin: 0px 0px 0px 0px;
 
 }
 
@@ -132,20 +131,20 @@ margin: 0px 0px 0px 0px;
 
 .tea {
 
-display: flex;
-flex-direction: column;
-width: 300px;
-height: auto;
-margin: 10px;
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  height: auto;
+  margin: 10px;
 
 }
 
 .tea img {
 
-display: inline-block;
-width: 300px;
-height: 200px;
-padding-bottom: 10px;
+  display: inline-block;
+  width: 300px;
+  height: 200px;
+  padding-bottom: 10px;
 
 }
 
@@ -161,39 +160,47 @@ padding-bottom: 10px;
 .location-container {
 
 display: flex;
-flex-grow: 1;
 flex-direction: column;
 align-items: center;
 justify-content: center;
-width: 100%;
 height: 500px;
 margin: 50px 0px 0px 0px;
-background-image: url('../images/img-locations-background.jpg')
+background-image: url('../images/img-locations-background.jpg');
 
 }
 
 
-.location-container span {
+.location-title {
 
-display: inline-block;
-width: 100%;
-height: 70px;
-margin: 0px
+  display: inline-block;
+  width: 100%;
+  height: 70px;
+  margin: 0px;
+
+}
+
+.location-blocks{
+
+  display: inline-block;
+  justify-content: center;
+  width: 1200px;
 
 }
 
 
 .location {
 
-display: flex;
-flex-direction: column;
-width: 300px;
-height: 350px;
-height: auto;
-background-color: black;
-align-items: center;
-justify-content: center;
-margin: 15px 40px;
+  display: inline-block;
+  height: 250px;
+  width: 300px;
+  background-color: black;
+  margin: 15px 20px;
 
+
+}
+
+.location p {
+
+opacity: 1;
 
 }
