--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -75,7 +75,6 @@ margin: auto;
 .mission {
 
   display: flex;
-  flex-grow: 1;
   align-items: center;
   width: 100%;
   height: 700px;
@@ -112,7 +111,7 @@ align-items: center;
 
   display: inline-block;
   width: 100%;
-  height: 120;
+  height: 120px;
   margin: 0px 0px 0px 0px;
 
 }
@@ -161,29 +160,32 @@ align-items: center;
 
 display: flex;
 flex-direction: column;
-align-items: center;
 justify-content: center;
 height: 500px;
+width: 1200px;
 margin: 50px 0px 0px 0px;
 background-image: url('../images/img-locations-background.jpg');
 
 }
 
+.location-title  {
 
-.location-title {
-
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 0px;
   width: 100%;
-  height: 70px;
-  margin: 0px;
+  margin: 0px 0px 15px 0px;
 
 }
 
-.location-blocks{
+.location-blocks {
 
-  display: inline-block;
+  display: flex;
   justify-content: center;
-  width: 1200px;
+  align-items: center;
+  width: 100%;
+  margin: 15px 0px 0px 0px;
 
 }
 
@@ -191,16 +193,34 @@ background-image: url('../images/img-locations-background.jpg');
 .location {
 
   display: inline-block;
+  align-items: center;
   height: 250px;
   width: 300px;
   background-color: black;
-  margin: 15px 20px;
+  margin: 0px 20px 0px 20px;
 
 
 }
 
 .location p {
 
-opacity: 1;
+  opacity: 1;
+
+}
+
+/* contact */
+
+.contact {
+
+  display: inline-block;
+  align-items: flex-start;
+  height: 200px;
+  margin: 10px;
+
+}
+
+.contact h2 {
+
+  margin: 0px;
 
 }
