finished footer, completed project

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -224,3 +224,12 @@ background-image: url('../images/img-locations-background.jpg');
   margin: 0px;
 
 }
+
+/* footer */
+
+footer {
+
+margin-left: 20px;
+text-align: left;
+
+}
